2011-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stdfn.c (not_a_number):  Possible fix for failure of NaN tests
	when build using mingw.

2011-09-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c src/graph3d.c src/graphics.c:  User-specified axis tick
	labels should override auto-generated tick labels in 3D plots just as
	they already do in 2D plots.

	* src/plot2d.c: In `plot with labels`, skip labels for which the x,y
	coordinates are UNDEFINED.
	Bug #3415454

2011-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes):  "with image" from a
	function may not make sense, but at least it should not segfault.
	Bug #3406642

2011-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Yet another rewrite of the installation path rules for
	TeX files.  Remove obsolete status messages.

2011-08-31  Ethan A Merritt  <merritt@u.washington.edu>

	Bump patchlevel and date in preparation for release 4.4.4

	configure.in:  Rewrite installation path rules for TeX files.
	Bug #3401370

2011-08-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* configure.in term/emf.trm (EMF_put_text): Use iconv (if available) to
	convert UTF-8 encoding to UTF-16 and store using wide characters.
	Bug #3021779

2011-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c:  Honor 'set key maxrows N' in 3D plot key.

2011-08-02  Adam Strzelecki <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h m4/apple.m4:
	OSX support for wxt terminal.  For OSX, switch to using single-threaded
	hybrid GUI & console event loop at wxt_waitforinput().
	Add -framework ApplicationServices to the apple-specific
	configuration flags.

2011-07-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Console gnuplot should leave
	wgnuplot's text window settings alone.
	Bug #3307884

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>
